feat: 角色接口
