# internal/api/role/vo/sysRoleVO.go
@@ -9,6 +9,4 @@ type SysRoleVO struct {
 	Sort        int64  `json:"sort"`        // 排序
 	CreatedAt   int64  `json:"createdAt"`   // 创建时间
 	UpdatedAt   int64  `json:"updatedAt"`   // 更新时间
-	CreatedBy   int64  `json:"createdBy"`   // 创建人
-	UpdatedBy   int64  `json:"updatedBy"`   // 更新人
 }
