# internal/router/role.go
@@ -1,0 +1,17 @@
+package router
+
+import (
+	"gin-admin-api/internal/api/role"
+	"gin-admin-api/internal/middleware"
+	"github.com/gin-gonic/gin"
+	"github.com/go-redis/redis/v8"
+)
+
+func InitRoleRouter(Router *gin.RouterGroup, redis *redis.Client, roleHandler role.IRole) {
+	authRouter := Router.Group("role", middleware.AuthMiddleWare(redis))
+	authRouter.POST("", roleHandler.CreateRoleApi)           // 创建角色
+	authRouter.DELETE("/:id", roleHandler.DeleteRoleByIdApi) // 根据id删除角色
+	authRouter.PUT("/:id", roleHandler.ModifyRoleByIdApi)    // 根据id修改角色
+	authRouter.POST("page", roleHandler.GetRolePageApi)      // 分页获取角色
+	authRouter.GET("list", roleHandler.GetRoleListApi)       // 获取角色列表
+}
